--- a/index.html
+++ b/index.html
@@ -22,130 +22,7 @@
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     <script src="./js/main.js"></script>
     <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: white;
-            color: black;
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-        body.dark-mode {
-            background-color: #121212;
-            color: white;
-        }
-
-        button {
-            padding: 10px 20px;
-            margin-top: 20px;
-            cursor: pointer;
-        }
-
-        #myImg {
-            border-radius: 5px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-
-        #myImg:hover {
-            opacity: 0.7;
-        }
-
-        /* The Modal (background) */
-        .modal {
-            display: none;
-            /* Hidden by default */
-            position: fixed;
-            /* Stay in place */
-            /* z-index: 1; Sit on top */
-            padding-top: 100px;
-            /* Location of the box */
-            left: 0;
-            top: 0;
-            width: 100%;
-            /* Full width */
-            height: 100%;
-            /* Full height */
-            overflow: auto;
-            /* Enable scroll if needed */
-            background-color: rgb(0, 0, 0);
-            /* Fallback color */
-            /* background-color: rgba(0,0,0,0.9); Black w/ opacity */
-            z-index: 9999999;
-        }
-
-        /* Modal Content (image) */
-        .modal-content {
-            margin: auto;
-            display: block;
-            width: 40%;
-            max-width: 700px;
-        }
-
-        /* Caption of Modal Image */
-        #caption {
-            margin: auto;
-            display: block;
-            width: 80%;
-            max-width: 700px;
-            text-align: center;
-            color: #ccc;
-            padding: 10px 0;
-            height: 150px;
-        }
-
-        /* Add Animation */
-        .modal-content,
-        #caption {
-            -webkit-animation-name: zoom;
-            -webkit-animation-duration: 0.6s;
-            animation-name: zoom;
-            animation-duration: 0.6s;
-        }
-
-        @-webkit-keyframes zoom {
-            from {
-                -webkit-transform: scale(0)
-            }
-
-            to {
-                -webkit-transform: scale(1)
-            }
-        }
-
-        @keyframes zoom {
-            from {
-                transform: scale(0)
-            }
-
-            to {
-                transform: scale(1)
-            }
-        }
-
-        /* The Close Button */
-        .close {
-            position: absolute;
-            top: 15px;
-            right: 35px;
-            color: #f1f1f1;
-            font-size: 40px;
-            font-weight: bold;
-            transition: 0.3s;
-        }
-
-        .close:hover,
-        .close:focus {
-            color: #bbb;
-            text-decoration: none;
-            cursor: pointer;
-        }
-
-        /* 100% Image Width on Smaller Screens */
-        @media only screen and (max-width: 700px) {
-            .modal-content {
-                width: 100%;
-            }
-        }
+        
     </style>
 </head>
 
@@ -161,6 +38,7 @@
                 <li><a href="#team">team</a></li>
                 <li><a href="#contact">contact</a></li>
                 <!-- <button id="toggle-button">Toggle Dark Mode</button> -->
+                <button id="toggle-button" class="btn btn-secondary">Toggle Dark Mode</button>
             </ul>
         </nav>
     </header>
@@ -189,7 +67,7 @@
 
     <div class="pt-5 pb-5">
         <div class="container">
-            <div class="row">
+            <div class="row project">
                 <div class="section-head-1 col-sm-12" style="text-align: center;">
                     <h4 style="margin-top: -5rem;" id="portfolio"><span>Project</span> Kami</h4>
 
@@ -522,6 +400,13 @@
             modal.style.display = "none";
         }
 
+
+    </script>
+
+    <script>
+        document.getElementById('toggle-button').addEventListener('click', function () {
+            document.body.classList.toggle('dark-mode');
+        });
 
     </script>
 
