--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link rel="icon" href="./images/ubig1.png">
+    <link rel="icon" href="./images/logo ubig.PNG">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -22,11 +22,11 @@
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     <script src="./js/main.js"></script>
     <style>
-        
+
     </style>
 </head>
 
-<body>
+<body id="body">
     <header class="header">
         <a href="#" class="logo"><img src="./images/ubig.png" alt=""></a>
         <div class="fas fa-bars"></div>
@@ -38,7 +38,8 @@
                 <li><a href="#team">team</a></li>
                 <li><a href="#contact">contact</a></li>
                 <!-- <button id="toggle-button">Toggle Dark Mode</button> -->
-                <button id="toggle-button" class="btn btn-secondary">Toggle Dark Mode</button>
+                <a id="toggle-button" class="btn"><i class="fas fa-moon"></i></a>
+                <!-- <a href=""><i class="ri-moon-line change-theme" id="toggle-button"></i></a> -->
             </ul>
         </nav>
     </header>
@@ -342,12 +343,12 @@
             <p>suratkita@gmail.com</p>
             <h2><i class="fa fa-map-marker" aria-hidden="true"></i> Address</h2>
             <p>Ruko Modern Kav A16-A17, Jl Loncat Indah, Tasikmadu, Kota Malang 65143</p>
-            <ul>
+            <!-- <ul>
                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fa fa-google" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-            </ul>
+            </ul> -->
         </div>
 
         <div class="contact-in">
@@ -374,31 +375,39 @@
     <script>
         // Get the modal
         // Get the modal
-        var modal = document.getElementById("myModal");
+        document.addEventListener("DOMContentLoaded", function () {
+            var modal = document.getElementById("myModal");
+            var modalImg = document.getElementById("img01");
+            var captionText = document.getElementById("caption");
+            var images = document.getElementsByClassName("myImg");
+            var span = document.getElementsByClassName("close")[0];
+            var body = document.getElementById("body")
 
-        // Get the modal image and caption text
-        var modalImg = document.getElementById("img01");
-        var captionText = document.getElementById("caption");
-
-        // Get all images in the carousel
-        var images = document.getElementsByClassName("myImg");
-
-        // Loop through all images and add click event listener
-        for (var i = 0; i < images.length; i++) {
-            images[i].onclick = function () {
-                modal.style.display = "block";
-                modalImg.src = this.src;
-                captionText.innerHTML = this.alt;
+            // Loop through all images and add click event listener
+            for (var i = 0; i < images.length; i++) {
+                images[i].onclick = function () {
+                    modal.style.display = "block";
+                    // body.style.overflow = "hidden";
+                    body.style.display = "hidden"
+                    modalImg.src = this.src;
+                    captionText.innerHTML = this.alt;
+                };
             }
-        }
 
-        // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
+            // When the user clicks on <span> (x), close the modal
+            span.onclick = function () {
+                modal.style.display = "none";
+                body.style.overflow = "auto";
+            };
 
-        // When the user clicks on <span> (x), close the modal
-        span.onclick = function () {
-            modal.style.display = "none";
-        }
+            // Close the modal when user clicks outside the modal content
+            window.onclick = function (event) {
+                if (event.target == modal) {
+                    modal.style.display = "none";
+                }
+            };
+        });
+
 
 
     </script>
