--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                 <div class="info">
                     <h3>Fara Azzura Dasgupta</h3>
                     <span>Frontend & Digital Marketing</span>
-                    <div class="icons">
+                    <div class="icons-1">
                         <!-- <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a> -->
                         <a href="https://www.instagram.com/fazuraa_d/" class="fab fa-instagram"></a>
                         <a href="https://www.youtube.com/@faraazzura" class="fab fa-youtube"></a>
