--- a/index.html
+++ b/index.html
@@ -21,18 +21,17 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     <script src="./js/main.js"></script>
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body id="body">
     <header class="header">
-        <a href="#" class="logo"><img src="./images/ubig.png" alt=""></a>
+        <a href="index.html" class="logo"><img src="./images/ubig.png" alt=""></a>
         <div class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
-                <li><a href="#home">home</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="#about">Project</a></li>
                 <li><a href="organisasi.html">Organisasi</a></li>
                 <li><a href="#team">team</a></li>
@@ -45,19 +44,24 @@
     </header>
 
     <section id="home" class="home">
-        <h1>Kontribusi dan Pembelajaran di PT Ubig</h1>
-        <h2>laporan PKL</h2>
+        <h1 class="animate__animated animate__lightSpeedInLeft animate__duration-5s">Kontribusi dan Pembelajaran di PT
+            Ubig</h1>
+        <h2 class="animate__animated animate__lightSpeedInRight animate__delay-1s">laporan PKL</h2>
         <div class="wave wave1"></div>
         <div class="wave wave2"></div>
         <div class="wave wave3"></div>
     </section>
 
     <section id="about" class="about">
-        <h1 class="heading">Apa yang kita dapatkan setelah magang di PT. UBIG</h1>
+        <h1 class="heading" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine"
+            data-aos-duration="1000">Apa yang kita
+            dapatkan setelah magang di PT. UBIG</h1>
         <div class="row">
             <div class="content">
                 <!-- <h3>yang kita Peroleh adalah</h3> -->
-                <p>Kami memperoleh banyak sekali ilmu dan pengalaman berharga dari PT. UBIG. <b> Melalui program-program
+                <p data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="3000">Kami memperoleh
+                    banyak sekali ilmu dan
+                    pengalaman berharga dari PT. UBIG. <b> Melalui program-program
                         yang dijalankan, serta kebiasaan dan peraturan yang diterapkan, kami menjadi pribadi yang lebih
                         disiplin dan bertanggung jawab. </b><br>
                     PT. UBIG tidak hanya memberikan pelajaran akademis, tetapi juga membentuk karakter dan etika kerja
@@ -70,14 +74,19 @@
         <div class="container">
             <div class="row project">
                 <div class="section-head-1 col-sm-12" style="text-align: center;">
-                    <h4 style="margin-top: -5rem;" id="portfolio"><span>Project</span> Kami</h4>
+                    <h4 data-aos="zoom-in-up" data-aos-duration="2000" style="margin-top: -5rem;" id="portfolio">
+                        <span>Project</span> Kami
+                    </h4>
 
-                    <p><br>Selama Magang Di PT UBIG <br> Kami BerEmpat Mengerjakan Project Di Tempat Magang Kami. Untuk
+                    <p data-aos="zoom-out" data-aos-duration="2000" id="project"><br>Selama Magang Di PT UBIG <br> Kami
+                        BerEmpat Mengerjakan Project Di Tempat Magang
+                        Kami. Untuk
                         Lebih Detail Nya Silahkan Klik Nama Kami Di Bawah
                     </p>
                 </div>
 
-                <a href="aris.html" style="text-decoration: none;" class="col-md-3 col-sm-4">
+                <a data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="2000"
+                    href="aris.html" style="text-decoration: none;" class="col-md-3 col-sm-4">
 
                     <div class="item"> <span class="icon feature_box_col_four"><img src="./images/laravel.png"
                                 style="width: 6rem; height: auto; border-radius: 4rem; margin-bottom: 6px;"
@@ -87,7 +96,8 @@
                     </div>
                 </a>
 
-                <a href="azhar.html" style="text-decoration: none;" class="col-md-3 col-sm-4">
+                <a data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="3000"
+                    href="azhar.html" style="text-decoration: none;" class="col-md-3 col-sm-4">
                     <div class="item"> <span class="icon feature_box_col_five"><img src="./images/flutter.png"
                                 style="width: 5rem; height: auto; border-radius: 4rem; margin-bottom: 6px;"
                                 alt=""></span>
@@ -95,7 +105,8 @@
                         <p>Silahkan Klik Untuk Melihat Lebih Detail Tentang Project Yang Di Kerjakan<br><br><br></p>
                     </div>
                 </a>
-                <a href="fara.html" style="text-decoration: none;" class="col-md-3 col-sm-4">
+                <a data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="3000"
+                    href="fara.html" style="text-decoration: none;" class="col-md-3 col-sm-4">
                     <div class="item"> <span class="icon feature_box_col_six"><img src="./images/botpress.jpg"
                                 style="width: 5rem; height: auto; border-radius: 4rem; margin-bottom: 6px;"
                                 alt=""></span>
@@ -103,7 +114,8 @@
                         <p>Silahkan Klik Untuk Melihat Lebih Detail Tentang Project Yang Di Kerjakan<br><br><br></p>
                     </div>
                 </a>
-                <a href="keysa.html" style="text-decoration: none;" class="col-md-3 col-sm-4">
+                <a data-aos="fade-left" data-aos-easing="ease-in-sine" data-aos-offset="300" data-aos-duration="2000"
+                    href="keysa.html" style="text-decoration: none;" class="col-md-3 col-sm-4">
                     <div class="item"> <span class="icon feature_box_col_six"><img src="./images/nobox.jpg"
                                 style="width: 5rem; height: auto; border-radius: 4rem; margin-bottom: 6px;"
                                 alt=""></span>
@@ -341,7 +353,7 @@
             <p>0812-1212-2388</p>
             <h2><i class="fa fa-envelope" aria-hidden="true"></i> Email</h2>
             <p>suratkita@gmail.com</p>
-            <h2><i class="fa fa-map-marker" aria-hidden="true"></i> Address</h2>
+            <h2><i class="fa fa-map-marker" aria-hidden="true"></i> Alamat</h2>
             <p>Ruko Modern Kav A16-A17, Jl Loncat Indah, Tasikmadu, Kota Malang 65143</p>
             <!-- <ul>
                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -387,8 +399,8 @@
             for (var i = 0; i < images.length; i++) {
                 images[i].onclick = function () {
                     modal.style.display = "block";
-                    // body.style.overflow = "hidden";
-                    body.style.display = "hidden"
+                    body.style.overflow = "hidden";
+                    // body.style.display = "hidden"
                     modalImg.src = this.src;
                     captionText.innerHTML = this.alt;
                 };
@@ -417,6 +429,10 @@
             document.body.classList.toggle('dark-mode');
         });
 
+    </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
     </script>
 
 </body>
