--- a/organisasi.html
+++ b/organisasi.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Laporan PKL</title>
-  <!-- <link rel="stylesheet" href="./css/style.css"> -->
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <link rel="icon" href="./images/ubig1.png">
+  <link rel="icon" href="./images/logo ubig.PNG">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -21,24 +21,29 @@
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
   <script src="./js/main.js"></script>
-  <link rel="stylesheet" href="cs.css">
+  <!-- <link rel="stylesheet" href="cs.css"> -->
 
 </head>
 
 <body>
-  <header class="header" style="background: linear-gradient(to left, #ff0000, #8b0000, #000000)">
-    <a href="#" class="logo"><img src="./images/ubig.png" alt=""></a>
+  <header class="header">
+    <a href="index.html" class="logo"><img src="./images/ubig.png" alt=""></a>
+    <div class="fas fa-bars"></div>
     <nav class="navbar">
       <ul>
-        <li><a href="index.html#home">Home</a></li>
+        <li><a href="index.html">home</a></li>
         <li><a href="index.html#about">Project</a></li>
-        <li><a href="index.html#team">Team</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="organisasi.html">Organisasi</a></li>
+        <li><a href="index.html#team">team</a></li>
+        <li><a href="index.html#contact">contact</a></li>
+        <!-- <button id="toggle-button">Toggle Dark Mode</button> -->
+        <a id="toggle-button" class="btn"><i class="fas fa-moon"></i></a>
+        <!-- <a href=""><i class="ri-moon-line change-theme" id="toggle-button"></i></a> -->
       </ul>
     </nav>
   </header>
 
-  <div class="org-chart">
+  <div class="org-chart" style="padding-top: 30rem;">
     <div class="level">
       <div class="position">
         <img src="./images/fatkulamri.jpg" alt="Vice President 1">
@@ -84,6 +89,13 @@
   <script src="lib/lightbox/js/lightbox.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="./js/main.js"></script>
+
+  <script>
+    document.getElementById('toggle-button').addEventListener('click', function () {
+      document.body.classList.toggle('dark-mode');
+    });
+
+  </script>
 </body>
 
 </html>
