--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="./js/main.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body id="body">
@@ -344,7 +345,7 @@
     </section>
 
     <section id="contact" class="contact">
-        <h1 class="heading">Lokasi</h1>
+        <h1 class="heading">Informasi</h1>
     </section>
     <div class="contact-wrap">
         <div class="contact-in">
@@ -430,11 +431,16 @@
             var icon = document.querySelector('#toggle-button i');
             if (document.body.classList.contains('dark-mode')) {
                 icon.classList.remove('fa-moon');
-                icon.classList.add('fa-sun');
+                icon.classList.add('fa-sun', 'animate');
             } else {
                 icon.classList.remove('fa-sun');
-                icon.classList.add('fa-moon');
+                icon.classList.add('fa-moon', 'animate');
             }
+
+            // Hapus kelas 'animate' setelah animasi selesai (0.5 detik)
+            setTimeout(function () {
+                icon.classList.remove('animate');
+            }, 500); // Sesuaikan dengan durasi animasi di dalam CSS
         });
     </script>
 
