--- a/aris.html
+++ b/aris.html
@@ -43,7 +43,44 @@
         </nav>
     </header>
 
+    <div class="container" style="padding-top: 20rem; text-align: center;">
+        <h1 style="font-size: 40px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Proyek Saya</h1>
+        <h3>Selama di Ubig, saya mengerjakan berbagai proyek. Berikut adalah proyek-proyek saya:</h3>
+    </div>
 
+    <div class="container" style="padding-top: 15rem;">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="./images/siakadplus.png" alt="" style="margin-right: 10px;">
+                <img id="app" src="./images/appsiakadplus.png" alt="">
+            </div>
+            <div class="col-md-6">
+                <h2 style="text-align: center;">Project Siakadplus</h2>
+                <h4 style="padding-top: 2rem;">SiakadPlus Adalah Aplikasi Dan Web Untuk Solusi Manajemen Sekolah</h4>
+                <h4 style="padding-top: 1rem;">Yang Canggih Dan Ramah Pengguna. Ini Menyederhanakan </h4>
+                <h4 style="padding-top: 1rem;">Komunikasi, Tugas Administratif, Dan Meningkatkan Pengalaman</h4>
+                <h4 style="padding-top: 1rem;">Pendidikan, Memastikan Keunggulan Dalam Manajemen Pendidikan.</h4>
+            </div>
+        </div>
+    </div>
+
+    <div class="container" style="padding-top: 10rem;">
+        <div class="row">
+            <div class="col-md-6">
+                <h2 style="text-align: center;">Botpress Cloud</h2>
+                <h4 style="padding-top: 2rem; text-align: left;">Saya Mengerjakan Dan Sekaligus Belajar Botpress Cloud</h4>
+                <h4 style="padding-top: 1rem; text-align: left;">Dan Saya Membuat Bot Di Botpress Cloud Yaitu Bot Movie,</h4>
+                <h4 style="padding-top: 1rem; text-align: left;">Bot Pelanggaran Siswa, Bot BPJS, Bot Quiz Login Dengan OTP, </h4>
+                <h4 style="padding-top: 1rem; text-align: left;">Dan Bot Laporan Masyarakat</h4>
+            </div>
+            <div class="col-md-6">
+                <div class="image">
+                    <img src="./images/bot1.jpg" alt="">
+                    <!-- <img src="./images/bot2.jpg" alt=""> -->
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
