--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <div class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
-                <li><a href="index.html">home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#about">Project</a></li>
-                <li><a href="organisasi.html">Organisasi</a></li>
-                <li><a href="#team">team</a></li>
+                <li><a href="organisasi.html#organisasi">Profil Ubig</a></li>
+                <li><a href="#team">Team</a></li>
                 <li><a href="#contact">Informasi</a></li>
                 <!-- <button id="toggle-button">Toggle Dark Mode</button> -->
                 <a id="toggle-button" class="btn"><i class="fas fa-moon"></i></a>
@@ -87,7 +87,7 @@
                 </div>
 
                 <a data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="2000"
-                    href="aris.html" style="text-decoration: none;" class=" card-1 col-md-3 col-sm-4">
+                    href="aris.html#aris" style="text-decoration: none;" class=" card-1 col-md-3 col-sm-4">
 
                     <div class="item"> <span class="icon feature_box_col_four"><img src="./images/laravel.png"
                                 style="width: 6rem; height: auto; border-radius: 4rem; margin-bottom: 6px;"
@@ -250,11 +250,13 @@
                 <img src="./images/laporan-fara.jpeg" alt="" class="myImg">
                 <img src="./images/laporan-keysa.jpeg" alt="" class="myImg">
                 <img src="./images/prestasi-aris.jpg" alt="" class="myImg">
-                <img src="./images/image.png" alt="" class="myImg">
-                <img src="./images/image.png" alt="" class="myImg">
+                <img src="./images/laporan1.jpg" alt="" class="myImg">
+                <img src="./images/laporan2.jpg" alt="" class="myImg">
                 <img src="./images/image.png" alt="" class="myImg">
             </div>
-
+            <div class="container" style="padding-top: 25px;">
+                <a href="selengkapnya.html" style="border: none; padding: 1rem; font-size: 15px; background: rgb(104, 104, 243); color: white; border-radius: 1rem; text-decoration: none;">Selengkapnya</a>
+            </div>
         </div>
     </div>
     <a href="#" class="back-to-top"><i class="ion-ios-arrow-up"></i></a>
@@ -421,11 +423,38 @@
             };
         });
 
+    </script>
+    <script>
+        function toggleDarkMode() {
+            document.body.classList.toggle('dark-mode');
+            var icon = document.querySelector('#toggle-button i');
+            if (document.body.classList.contains('dark-mode')) {
+                icon.classList.remove('fa-moon');
+                icon.classList.add('fa-sun', 'animate');
+                localStorage.setItem('darkMode', 'enabled');
+            } else {
+                icon.classList.remove('fa-sun');
+                icon.classList.add('fa-moon', 'animate');
+                localStorage.setItem('darkMode', 'disabled');
+            }
+            setTimeout(function () {
+                icon.classList.remove('animate');
+            }, 500);
+        }
 
+        document.getElementById('toggle-button').addEventListener('click', toggleDarkMode);
 
+        window.addEventListener('DOMContentLoaded', (event) => {
+            if (localStorage.getItem('darkMode') === 'enabled') {
+                document.body.classList.add('dark-mode');
+                var icon = document.querySelector('#toggle-button i');
+                icon.classList.remove('fa-moon');
+                icon.classList.add('fa-sun');
+            }
+        });
     </script>
 
-    <script>
+    <!-- <script>
         document.getElementById('toggle-button').addEventListener('click', function () {
             document.body.classList.toggle('dark-mode');
             var icon = document.querySelector('#toggle-button i');
@@ -442,7 +471,7 @@
                 icon.classList.remove('animate');
             }, 500); // Sesuaikan dengan durasi animasi di dalam CSS
         });
-    </script>
+    </script> -->
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
