--- a/mentahan.html
+++ b/mentahan.html
@@ -23,15 +23,11 @@
     <script src="./js/main.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
-    <style>
-        body.dark-mode .container img {
-            box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
+
     <header class="header">
         <a href="index.html" class="logo"><img src="./images/ubig.png" alt=""></a>
         <div class="fas fa-bars"></div>
@@ -39,7 +35,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#about">Project</a></li>
-                <li><a href="organisasi.html">Profil Ubig</a></li>
+                <li><a href="organisasi.html#organisasi">Profil Ubig</a></li>
                 <li><a href="index.html#team">Team</a></li>
                 <li><a href="index.html#contact">Informasi</a></li>
                 <!-- <button id="toggle-button">Toggle Dark Mode</button> -->
@@ -49,52 +45,48 @@
         </nav>
     </header>
 
-    <div class="container" style="padding-top: 20rem; text-align: center;">
-        <section id="aris"></section>
-        <h1 style="font-size: 40px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Proyek Saya</h1>
-        <h3>Selama di Ubig, saya mengerjakan berbagai proyek. Berikut adalah proyek-proyek saya:</h3>
-    </div>
-
-    <div class="container" style="padding-top: 15rem;">
-        <div class="row">
-            <div class="col-md-6">
-                <img src="./images/siakadplus.png" alt=""
-                    style="margin-right: 10px; width: 30rem; height: auto; border-radius: 3rem;">
-                <img id="app" src="./images/appsiakadplus.png" style="width: 20rem; border-radius: 3rem;" alt="">
-            </div>
-            <div class="col-md-6">
-                <h2 style="text-align: center;">Project Siakadplus</h2>
-                <h4 style="padding-top: 2rem;">SiakadPlus Adalah Aplikasi Dan Web Untuk Solusi Manajemen Sekolah</h4>
-                <h4 style="padding-top: 1rem;">Yang Canggih Dan Ramah Pengguna. Ini Menyederhanakan </h4>
-                <h4 style="padding-top: 1rem;">Komunikasi, Tugas Administratif, Dan Meningkatkan Pengalaman</h4>
-                <h4 style="padding-top: 1rem;">Pendidikan, Memastikan Keunggulan Dalam Manajemen Pendidikan.</h4>
-            </div>
-        </div>
-    </div>
-
-    <div class="container" style="padding-top: 10rem;">
-        <div class="row">
-            <div class="col-md-6">
-                <h2 style="text-align: center;">Botpress Cloud</h2>
-                <h4 style="padding-top: 2rem; text-align: left;">Saya Mengerjakan Dan Sekaligus Belajar Botpress Cloud
-                </h4>
-                <h4 style="padding-top: 1rem; text-align: left;">Dan Saya Membuat Bot Di Botpress Cloud Yaitu Bot Movie,
-                </h4>
-                <h4 style="padding-top: 1rem; text-align: left;">Bot Pelanggaran Siswa, Bot BPJS, Bot Quiz Login Dengan
-                    OTP, </h4>
-                <h4 style="padding-top: 1rem; text-align: left;">Dan Bot Laporan Masyarakat</h4>
-            </div>
-            <div class="col-md-6">
-                <div class="image">
-                    <img src="./images/bot1.jpg" style="width: 100%; height: auto; border-radius: 2rem;" alt="">
-                    <!-- <img src="./images/bot2.jpg" alt=""> -->
-                </div>
-            </div>
-        </div>
-    </div>
 
 
 
+
+
+    <script>
+        // Get the modal
+        // Get the modal
+        document.addEventListener("DOMContentLoaded", function () {
+            var modal = document.getElementById("myModal");
+            var modalImg = document.getElementById("img01");
+            var captionText = document.getElementById("caption");
+            var images = document.getElementsByClassName("myImg");
+            var span = document.getElementsByClassName("close")[0];
+            var body = document.getElementById("body")
+
+            // Loop through all images and add click event listener
+            for (var i = 0; i < images.length; i++) {
+                images[i].onclick = function () {
+                    modal.style.display = "block";
+                    body.style.overflow = "hidden";
+                    // body.style.display = "hidden"
+                    modalImg.src = this.src;
+                    captionText.innerHTML = this.alt;
+                };
+            }
+
+            // When the user clicks on <span> (x), close the modal
+            span.onclick = function () {
+                modal.style.display = "none";
+                body.style.overflow = "auto";
+            };
+
+            // Close the modal when user clicks outside the modal content
+            window.onclick = function (event) {
+                if (event.target == modal) {
+                    modal.style.display = "none";
+                }
+            };
+        });
+
+    </script>
     <script>
         function toggleDarkMode() {
             document.body.classList.toggle('dark-mode');
@@ -124,6 +116,26 @@
             }
         });
     </script>
+
+    <!-- <script>
+        document.getElementById('toggle-button').addEventListener('click', function () {
+            document.body.classList.toggle('dark-mode');
+            var icon = document.querySelector('#toggle-button i');
+            if (document.body.classList.contains('dark-mode')) {
+                icon.classList.remove('fa-moon');
+                icon.classList.add('fa-sun', 'animate');
+            } else {
+                icon.classList.remove('fa-sun');
+                icon.classList.add('fa-moon', 'animate');
+            }
+
+            // Hapus kelas 'animate' setelah animasi selesai (0.5 detik)
+            setTimeout(function () {
+                icon.classList.remove('animate');
+            }, 500); // Sesuaikan dengan durasi animasi di dalam CSS
+        });
+    </script> -->
+
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
