--- a/organisasi.html
+++ b/organisasi.html
@@ -23,6 +23,40 @@
   <script src="./js/main.js"></script>
   <!-- <link rel="stylesheet" href="cs.css"> -->
 
+  <style>
+    .container {
+      display: flex;
+      align-items: center;
+      padding: 20px;
+      background-color: white;
+      /* Tambahkan background-color putih agar bayangan terlihat */
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      /* Tambahkan bayangan */
+      border-radius: 8px;
+      /* Sesuaikan dengan card di kode kedua */
+    }
+
+     img {
+      max-width: 200px;
+      margin-right: 20px;
+      border-radius: 8px;
+      /* Sesuaikan dengan card di kode kedua */
+    }
+
+    .description {
+      max-width: 600px;
+      text-align: left;
+    }
+
+    /* body.dark-mode . {
+      background-color: #000000;
+      Background hitam untuk mode gelap
+      color: white;
+      box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
+      Bayangan putih untuk mode gelap
+    } */
+  </style>
+
 </head>
 
 <body>
@@ -33,7 +67,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html#about">Project</a></li>
-        <li><a href="organisasi.html">Organisasi</a></li>
+        <!-- <li><a href="organisasi.html">Organisasi</a></li> -->
         <li><a href="index.html#team">Team</a></li>
         <li><a href="index.html#contact">Informasi</a></li>
         <!-- <button id="toggle-button">Toggle Dark Mode</button> -->
@@ -43,8 +77,36 @@
     </nav>
   </header>
 
-  <div class="org-chart" style="padding-top: 30rem;">
-    <div class="level">
+  <section id="organisasi" style="padding-top: 12px;"></section>
+  <div class="org-chart">
+    <div class="leder">
+      <div class="" style="padding-top: 30rem; display: flex; justify-content: center;">
+        <img src="./images/depan-ubig.jpg" style="width: 300rem; border-radius: 2rem;" alt="">
+        <div class="description">
+          <h1>PT Universal Big Data</h1>
+          <h3>(UBIG)</h3>
+          <h4>PT. Universal Big Data (UBig.co.id) adalah anak perusahaan PT. Alfasoft, didirikan oleh Fatkul Amri pada
+            tahun
+            2003. Berlokasi di Malang, Jawa Timur, dengan kantor di Jl. Mawar Jambe No. 13, No. 2 Kalpataru, dan Jl.
+            Loncat
+            Indah Kav No. A16-17. UBig.co.id fokus menyediakan platform dan konten Big Data dalam berbagai kategori
+            (harga,
+            berita, gaya hidup, dll.) yang dapat diakses melalui API/Webservice menggunakan berbagai bahasa pemrograman.
+            UBig.co.id melayani Data Center di Amerika, Singapura, dan Indonesia.
+          </h4>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+  <div class="org-chart" style="padding-top: 10rem;">
+    <h1>Struktur Organisasi</h1>
+    <div class="level" style="padding-top: 12px;">
       <div class="position">
         <img src="./images/fatkulamri.jpg" alt="Vice President 1">
         <div class="title">Direktur Utama</div>
@@ -88,24 +150,37 @@
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
   <script src="lib/lightbox/js/lightbox.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="./js/main.js"></script>
+
+
+
 
   <script>
-    document.getElementById('toggle-button').addEventListener('click', function () {
+    function toggleDarkMode() {
       document.body.classList.toggle('dark-mode');
       var icon = document.querySelector('#toggle-button i');
       if (document.body.classList.contains('dark-mode')) {
         icon.classList.remove('fa-moon');
         icon.classList.add('fa-sun', 'animate');
+        localStorage.setItem('darkMode', 'enabled');
       } else {
         icon.classList.remove('fa-sun');
         icon.classList.add('fa-moon', 'animate');
+        localStorage.setItem('darkMode', 'disabled');
       }
-
-      // Hapus kelas 'animate' setelah animasi selesai (0.5 detik)
       setTimeout(function () {
         icon.classList.remove('animate');
-      }, 500); // Sesuaikan dengan durasi animasi di dalam CSS
+      }, 500);
+    }
+
+    document.getElementById('toggle-button').addEventListener('click', toggleDarkMode);
+
+    window.addEventListener('DOMContentLoaded', (event) => {
+      if (localStorage.getItem('darkMode') === 'enabled') {
+        document.body.classList.add('dark-mode');
+        var icon = document.querySelector('#toggle-button i');
+        icon.classList.remove('fa-moon');
+        icon.classList.add('fa-sun');
+      }
     });
   </script>
 </body>
