--- a/index.html
+++ b/index.html
@@ -143,22 +143,19 @@
                 <h3>Jam Kerja</h3>
             </div>
             <div>
-                <i class="fas fa-gift fa-4x"></i>
-                <div class="counter" data-target="720">0</div>
-                <h3>Total Project</h3>
+                <i class="fas fa-clock fa-4x"></i>
+                <div class="counter" data-target="59400">0</div>
+                <h3>Jam Pulang</h3>
             </div>
             <div>
                 <i class="fas fa-users fa-4x"></i>
-                <div class="counter" data-target="480">0</div>
-                <h3>Happy Clients</h3>
-            </div>
-            <div>
-                <i class="fas fa-award fa-4x"></i>
-                <div class="counter" data-target="120">0</div>
-                <h3>Awards Received</h3>
+                <div class="counter" data-target="4">4</div>
+                <h3>Team</h3>
             </div>
         </div>
     </section>
+
+
 
     <!-- <section id="organisasi"></section>
 
@@ -255,7 +252,8 @@
                 <img src="./images/image.png" alt="" class="myImg">
             </div>
             <div class="container" style="padding-top: 25px;">
-                <a href="selengkapnya.html" style="border: none; padding: 1rem; font-size: 15px; background: rgb(104, 104, 243); color: white; border-radius: 1rem; text-decoration: none;">Selengkapnya</a>
+                <a href="selengkapnya.html"
+                    style="border: none; padding: 1rem; font-size: 15px; background: rgb(104, 104, 243); color: white; border-radius: 1rem; text-decoration: none;">Selengkapnya</a>
             </div>
         </div>
     </div>
