--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -24,6 +24,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        body.dark-mode .container img {
+            box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
+        }
+    </style>
 </head>
 
 <body>
@@ -47,20 +52,81 @@
 
     <div class="container" style="padding-top: 20rem; text-align: center;">
         <h1> Deskripsi Kegiatan </h1>
-        <h4>Magang di PT. Universal Big Data berlangsung 5 hari seminggu, dengan kombinasi kegiatan pekerjaan dan kegiatan religius rutin. </h4>
+        <!-- <h4>Magang di PT. Universal Big Data berlangsung 5 hari seminggu, dengan kombinasi kegiatan pekerjaan dan kegiatan religius rutin. </h4> -->
     </div>
 
     <div class="container" style="padding-top: 10rem;">
         <div class="row">
             <div class="col-md-6">
-                <img src="./images/laporan2.jpg" style="width: 40rem;" alt="">
+                <img src="./images/laporan2.jpg" style="margin-right: 10px; width: 30rem; height: auto; border-radius: 3rem;" alt="">
+                <img src="./images/pin aris.jpg" style="width: 20rem; border-radius: 3rem;" alt="">
+            </div>
+            <div class="col-md-6" style="padding-top: 7rem;">
+                <h3 style="text-align: center;"><b>Kehadiran:</b></h3>
+                <h4 style="padding-top: 2rem;">Praktik kerja lapangan di PT. Universal Big Data berlangsung 5 hari   </h4>
+                <h4 style="padding-top: 1rem;">seminggu, dari pukul 07.30 hingga 16.30. </h4>
+                <!-- <h4 style="padding-top: 1rem;">finger print.</h4> -->
             </div>
         </div>
     </div>
 
+    <div class="container" style="padding-top: 10rem;">
+        <div class="row">
+            <div class="col-md-6" style="padding-top: 6rem;">
+                <h3 style="text-align: center;"><b>Pagi Hari</b></h3>
+                <h4 style="padding-top: 1rem;">Senin hingga Kamis dimulai dengan murajaah yasin dan setoran  </h4>
+                <h4 style="padding-top: 1rem;">hafalan sebelum mengerjakan proyek. </h4>
+                <!-- <h4 style="padding-top: 1rem;">yasin pagi)</h4> -->
+            </div>
+            <div class="col-md-6" style="display: flex; justify-content: center;">
+                <img src="./images/laporan1.jpg" style="margin-right: 10px; width: 40rem; height: auto; border-radius: 3rem;" alt="">
+            </div>
+        </div>
+    </div>
 
+    <div class="container" style="padding-top: 10rem;">
+        <div class="row">
+            <div class="col-md-6" style="display: flex; justify-content: center; align-items: center;">
+                <img src="./images/bg1.jpg" style="width: 40rem; height: auto; border-radius: 3rem; margin-right: 12px;" alt="">
+                <!-- <img src="./images/lapoaran-azhar.jpeg" style=" width: 20rem; height: auto; border-radius: 3rem;" alt=""> -->
+                <!-- <img src="./images/laporan-fara.jpeg" style=" width: 25rem; height: auto; border-radius: 3rem; margin-top: 15px; margin-right: 12px;" alt=""> -->
+                <!-- <img src="./images/laporan-aris.jpeg" style=" width: 25rem; height: auto; border-radius: 3rem;" alt=""> -->
+            </div>
+            <div class="col-md-6" style="padding-top: 6rem;">
+                <h3 style="text-align: center;"><b>Setiap Hari Jum'at</b></h3>
+                <h4 style="padding-top: 1rem;">Jumat diawali dengan membaca surah yasin dan pengajian oleh </h4>
+                <h4 style="padding-top: 1rem;">Bapak Fatkul Amri</h4>
+            </div>
+        </div>
+    </div>
 
+    <div class="container" style="padding-top: 10rem;">
+        <div class="row">
+            <div class="col-md-6" style="padding-top: 15rem;">
+                <h4 style="padding-top: 1rem;">Evaluasi proyek dilakukan oleh Bapak Fatkul Amri di ruang meeting, </h4>
+                <h4 style="padding-top: 1rem;">dengan proyek dibagi menjadi tim FrontEnd dan BackEnd serta </h4>
+                <h4 style="padding-top: 1rem;">proyek individu. </h4>
+            </div>
+            <div class="col-md-6">
+                <img src="./images/lapoaran-azhar.jpeg" style="width: 30rem; height: 20rem; border-radius: 3rem; margin-right: 12px;" alt="">
+                <img src="./images/laporan-aris.jpeg" style="width: 20rem; height: auto; border-radius: 3rem; margin-right: 12px;" alt="">
+                <img src="./images/prestasi-aris.jpg" style="width: 20rem; height: 13rem; border-radius: 3rem; margin-right: 12px;" alt="">
+                <img src="./images/laporan-fara.jpeg" style="width: 30rem; height: 20rem; border-radius: 3rem; margin-right: 12px; margin-top: 1rem;" alt="">
+            </div>
+        </div>
+    </div>
 
+    <div class="container" style="padding-top: 10rem;">
+        <div class="row">
+            <div class="col-md-6" style="display: flex; justify-content: center; align-items: center;">
+                <img src="./images/pushup.jpg" style="width: 40rem; height: auto; border-radius: 3rem; margin-right: 12px;" alt="">
+            </div>
+            <div class="col-md-6" style="padding-top: 6rem;">
+                <h4 style="padding-top: 1rem;"> Keterlambatan masuk atau evaluasi tanpa izin grup koordinasi</h4>
+                <h4 style="padding-top: 1rem;">dihukum dengan push up.</h4>
+            </div>
+        </div>
+    </div>
 
 
     <script>
