--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -120,10 +120,11 @@
         <div class="row">
             <div class="col-md-6" style="display: flex; justify-content: center; align-items: center;">
                 <img src="./images/pushup.jpg" style="width: 40rem; height: auto; border-radius: 3rem; margin-right: 12px;" alt="">
+                <!-- <img src="./images/pushup-fara.jpg" style="width: 20rem; height: auto; border-radius: 3rem; margin-right: 12px;" alt=""> -->
             </div>
             <div class="col-md-6" style="padding-top: 6rem;">
-                <h4 style="padding-top: 1rem;"> Keterlambatan masuk atau evaluasi tanpa izin grup koordinasi</h4>
-                <h4 style="padding-top: 1rem;">dihukum dengan push up.</h4>
+                <h4 style="padding-top: 1rem;">Keterlambatan masuk tanpa konfirmasi izin di grup koordinasi dan</h4>
+                <h4 style="padding-top: 1rem;">keterlambatakan evaluasi maka dikenakan sanksi hukuman push-up</h4>
             </div>
         </div>
     </div>
