--- a/index.html
+++ b/index.html
@@ -344,6 +344,48 @@
         </div>
     </section>
 
+    <section id="pesanDanKesan" class="contact">
+        <h1 class="heading">Pesan Dan Kesan</h1>
+    </section>
+
+    <div class="kesan">
+        <div class="pesan">
+            <div class="card-3">
+                <h2>Pesan</h2>
+                <p style="font-size: 14px;">Kami merasa sangat beruntung telah mendapatkan kesempatan untuk magang di
+                    PT. Universal Big Data
+                    Malang. Selama masa magang ini, kami tidak hanya memperoleh pengetahuan teknis yang sangat berharga,
+                    tetapi juga mempelajari pentingnya kerjasama tim, komunikasi yang efektif, dan etos kerja yang
+                    profesional. Bantuan dan bimbingan yang diberikan oleh pembimbing magang dan teman-teman magang yang
+                    lainnya sangat membantu dalam memahami materi yang diberikan. Kami berharap perusahaan ini terus
+                    maju dan menjadi yang terdepan dalam inovasi teknologi big data di Indonesia.</p>
+            </div>
+
+            <div class="card-3">
+                <h2>Kesan</h2>
+                <p style="font-size: 14px;"> Kami merasa sangat beruntung telah mendapatkan kesempatan untuk magang di
+                    PT. Universal Big Data
+                    Malang. Selama masa magang ini, kami tidak hanya memperoleh pengetahuan teknis yang sangat berharga,
+                    tetapi juga mempelajari pentingnya kerjasama tim, komunikasi yang efektif, dan etos kerja yang
+                    profesional. Bantuan dan bimbingan yang diberikan oleh pembimbing magang dan teman-teman magang yang
+                    lainnya sangat membantu dalam memahami materi yang diberikan. Kami berharap perusahaan ini terus
+                    maju dan menjadi yang terdepan dalam inovasi teknologi big data di Indonesia.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="kesan-1">
+        <div class="pesan-1">
+            <div class="card-4">
+                <p style="font-size: 14px;">
+                    Dengan pesan dan kesan ini, saya ingin mengucapkan terima kasih kepada seluruh tim PT. Universal Big
+                    Data Malang atas kesempatan dan pengalaman yang luar biasa ini. Semoga hubungan baik ini dapat terus
+                    terjalin di masa depan.
+                </p>
+            </div>
+        </div>
+    </div>
+
     <section id="contact" class="contact">
         <h1 class="heading">Informasi</h1>
     </section>
